Discovery: plugin management

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /business-services/two/target/
 /business-services/one/target/
 /business-services/common/target/
+/business-services/two-api/target/
