--- a/business-services/common/src/main/resources/application.properties
+++ b/business-services/common/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8082
+server.port=8083
 spring.application.name=common
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_URI:localhost}:8761/eureka
 baeldung.archaius.properties.one=one FROM:application.properties
 baeldung.archaius.properties.two=two FROM:application.properties
