--- a/business-services/one/src/main/resources/application.yml
+++ b/business-services/one/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   application:
-    name: spring-cloud-eureka-client
+    name: one
 server:
-  port: 0
+  port: 8081
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+      defaultZone: http://${EUREKA_URI:localhost}:8761/eureka
   instance:
     preferIpAddress: true
