--- a/business-services/two/src/main/resources/application.yml
+++ b/business-services/two/src/main/resources/application.yml
@@ -1,9 +1,10 @@
 spring:
   application:
-    name: spring-cloud-eureka-feign-client
+    name: two
 server:
-  port: 8080
+  port: 8082
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+      defaultZone: http://${EUREKA_URI:localhost}:8761/eureka
+#      defaultZone: """${EUREKA_URI:http://localhost:8761/eureka}
