--- a/platform-services/apigateway/src/main/resources/application.yml
+++ b/platform-services/apigateway/src/main/resources/application.yml
@@ -1,21 +1,23 @@
 server:
-  port: 8081
+  port: 8765
 
 spring:
   application:
     name: apigateway
 
+EUREKA_URI: localhost
+
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://${EUREKA_URI:localhost}:8761/eureka
 
 zuul:
   routes:
     properties-from-dynamic:
       path: /properties-from-dynamic
-      url: http://localhost:8082/properties-from-dynamic
-      
-#    foos:
-#      path: /foos/**
-#      url: http://localhost:8082/spring-zuul-foos-resource/foos
+      serviceId: common
+    greeting-from-rest-consumer:
+      path: /api/get-greeting
+      serviceId: two
+
