--- a/business-services/one/pom.xml
+++ b/business-services/one/pom.xml
@@ -33,7 +33,7 @@
         </dependency>
         <dependency>
             <groupId>com.netflix.servo</groupId>
-            <artifactId>servo-atlas</artifactId>
+            <artifactId>servo-graphite</artifactId>
             <version>0.12.17</version>
         </dependency>
         <dependency>
