--- a/platform-services/discovery/src/main/resources/application.properties
+++ b/platform-services/discovery/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=8761
 spring.application.name=discovery
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+spring.zipkin.base-url=http://${ZIPKIN_HOST:localhost}:9411/
